[gd_scene load_steps=21 format=3 uid="uid://ciieble3crcxy"]

[ext_resource type="Script" path="res://scripts/enemies/blob_controller.gd" id="1_kmuu8"]
[ext_resource type="Shader" path="res://scripts/shaders/damage_flash.gdshader" id="2_p16fl"]
[ext_resource type="Texture2D" uid="uid://bdjmfcs618m16" path="res://assets/images/enemies/blob.png" id="3_jb1co"]
[ext_resource type="PackedScene" uid="uid://dsmx1utubr8d7" path="res://scenes/components/health_component.tscn" id="4_pxl7b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fexdy"]
resource_local_to_scene = true
shader = ExtResource("2_p16fl")
shader_parameter/flash_color = Color(1, 0.388235, 0.321569, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fjar7"]
atlas = ExtResource("3_jb1co")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqf5x"]
atlas = ExtResource("3_jb1co")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrhp"]
atlas = ExtResource("3_jb1co")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pggql"]
atlas = ExtResource("3_jb1co")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mid5f"]
atlas = ExtResource("3_jb1co")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf15x"]
atlas = ExtResource("3_jb1co")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbwwk"]
atlas = ExtResource("3_jb1co")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34a5r"]
atlas = ExtResource("3_jb1co")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s34vg"]
animations = [{
"frames": [],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjar7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqf5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pggql")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mid5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf15x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbwwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34a5r")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_6r886"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jxjh7"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ksndq"]
_data = {
"RESET": SubResource("Animation_6r886"),
"flash": SubResource("Animation_jxjh7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgivn"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_g4tic"]
radius = 155.029

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48v62"]
size = Vector2(64, 46)

[node name="Blob" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 0
motion_mode = 1
script = ExtResource("1_kmuu8")
crasis_value = 1
is_melee = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_fexdy")
sprite_frames = SubResource("SpriteFrames_s34vg")
animation = &"death"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_ksndq")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qgivn")

[node name="ObjectParent" type="Node" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("4_pxl7b")]
curr_health = 30.0
max_health = 30.0

[node name="GlobalCooldown" type="Timer" parent="."]
one_shot = true

[node name="VisionArea" type="Area2D" parent="."]

[node name="VisionShape" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_g4tic")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_48v62")

[node name="AirTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="Dead" from="HealthComponent" to="." method="_on_health_component_dead"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="AirTimer" to="." method="_on_air_timer_timeout"]
